{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 41,
  "lineage": "c758d09c-c090-3292-a020-9cbe27073dc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f66e94e15833238b",
            "association_id": "eipassoc-03ea56f735d0e50ef",
            "domain": "vpc",
            "id": "eipalloc-0f66e94e15833238b",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0cbf0457d741cbcd3",
            "private_dns": "ip-10-0-0-170.us-west-1.compute.internal",
            "private_ip": "10.0.0.170",
            "public_dns": "ec2-54-67-89-151.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.89.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:internet-gateway/igw-07a550009d0057039",
            "id": "igw-07a550009d0057039",
            "owner_id": "006837851637",
            "tags": {
              "Name": "terra-test-IGW"
            },
            "tags_all": {
              "Name": "terra-test-IGW"
            },
            "vpc_id": "vpc-070f08e92ce75a951"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f66e94e15833238b",
            "connectivity_type": "public",
            "id": "nat-0a725a374eebb8f47",
            "network_interface_id": "eni-0cbf0457d741cbcd3",
            "private_ip": "10.0.0.170",
            "public_ip": "54.67.89.151",
            "subnet_id": "subnet-029e262fd6b578218",
            "tags": {
              "Name": "terra-test-NAT-GW"
            },
            "tags_all": {
              "Name": "terra-test-NAT-GW"
            }
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06687ac17b42fb6261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a725a374eebb8f47",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06687ac17b42fb626",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_private",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07a550009d0057039",
            "id": "r-rtb-0bc7a1ed9dfd04f8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc7a1ed9dfd04f8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:route-table/rtb-06687ac17b42fb626",
            "id": "rtb-06687ac17b42fb626",
            "owner_id": "006837851637",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a725a374eebb8f47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT"
            },
            "tags_all": {
              "Name": "private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-070f08e92ce75a951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:route-table/rtb-0bc7a1ed9dfd04f8b",
            "id": "rtb-0bc7a1ed9dfd04f8b",
            "owner_id": "006837851637",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a550009d0057039",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-070f08e92ce75a951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab4ebb22e3b93151",
            "route_table_id": "rtb-06687ac17b42fb626",
            "subnet_id": "subnet-073e98cef8748f5ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_route_table.route_table_private",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000bb0e7fb9e503b1",
            "route_table_id": "rtb-0bc7a1ed9dfd04f8b",
            "subnet_id": "subnet-029e262fd6b578218"
          },
          "dependencies": [
            "aws_route_table.route_table_public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:subnet/subnet-073e98cef8748f5ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073e98cef8748f5ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006837851637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-test-private-subnet"
            },
            "tags_all": {
              "Name": "terra-test-private-subnet"
            },
            "vpc_id": "vpc-070f08e92ce75a951"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:subnet/subnet-029e262fd6b578218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e262fd6b578218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006837851637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-test-public-subnet"
            },
            "tags_all": {
              "Name": "terra-test-public-subnet"
            },
            "vpc_id": "vpc-070f08e92ce75a951"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:vpc/vpc-070f08e92ce75a951",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd16828276a30e10",
            "default_route_table_id": "rtb-094c066c8717e927c",
            "default_security_group_id": "sg-0d4c451f13ed3c26a",
            "dhcp_options_id": "dopt-b9bc8bde",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-070f08e92ce75a951",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094c066c8717e927c",
            "owner_id": "006837851637",
            "tags": {
              "Name": "terra-test-vpc"
            },
            "tags_all": {
              "Name": "terra-test-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:006837851637:vpc-endpoint/vpce-05def2aa851d3beeb",
            "cidr_blocks": [
              "52.219.120.0/22",
              "52.219.194.0/24",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22",
              "52.219.192.0/23"
            ],
            "id": "vpce-05def2aa851d3beeb",
            "owner_id": "006837851637",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-west-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-070f08e92ce75a951"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}